cmake_minimum_required(VERSION 3.20)
project(microps C)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_C_FLAGS "-g -W -Wall -Wno-unused-parameter")
set(CMAKE_C_FLAGS_DEBUG "-DHEXDUMP")
include_directories(.)
add_executable(test0 test/step0.c util.c)
add_executable(test1 test/step1.c util.c net.c ip.c icmp.c driver/null.c)
add_executable(test2 test/step2.c util.c net.c ip.c icmp.c driver/loopback.c)
add_executable(test3 test/step3.c util.c net.c ip.c icmp.c driver/loopback.c)
add_executable(test4 test/step4.c util.c net.c ip.c icmp.c driver/loopback.c)
add_executable(test5 test/step5.c util.c net.c ip.c icmp.c driver/loopback.c)
add_executable(test6 test/step6.c util.c net.c ip.c icmp.c driver/loopback.c)
add_executable(test7 test/step7.c util.c net.c ip.c icmp.c driver/loopback.c)
add_executable(test8 test/step8.c util.c net.c ip.c icmp.c driver/loopback.c)
add_executable(test9 test/step9.c util.c net.c ip.c icmp.c driver/loopback.c)
